# AdaAttn

./: .editorconfig  .gitignore  Dockerfile  README.md  README_RESEARCH.md  docker-compose.yml  pyproject.toml  requirements.txt
benchmarks/: README.md  adaptive_benchmark.py  benchmark_attention.py  comprehensive_benchmark.py  gpu_benchmark.py
benchmarks/flashattention/: flash_attention.py
benchmarks/pytorch_attention/: baseline.py
docker/: entrypoint.sh
docs/: phase1_complete.md  phase2_complete.md  phase2_progress.md  phase3_gpu_optimizations.md  phase3_plan.md  project_plan.md  project_status.md  research_setup.md  research_todo.md  todo.md
docs/future_work/: README.md
examples/: README.md  adaptive_attention_demo.py  basic_usage.py  transformer_integration.py
examples/notebooks/: 01_research_quickstart.ipynb
memory-bank/: app-description.md  change-log.md
results/: attention_benchmark.csv  attention_benchmark.json  phase2_adaptive_results.json
scripts/: research_cli.py  run_baseline_benchmark.py
src/adaattn/: __init__.py
src/adaattn/attention/: __init__.py  adaattn.py  adaptive_precision.py  adaptive_rank.py  base.py  dense.py
src/adaattn/kernels/: __init__.py  bindings.cpp  cuda_utils.py  flash_attention.py
src/adaattn/kernels/adaptive/: entropy_estimate.cu  low_rank_gemm.cu  mixed_precision.cu
src/adaattn/kernels/flash_like/: av_gemm.cu  fused_kernel.cu  qk_gemm.cu  softmax.cu
src/adaattn/linalg/: __init__.py  entropy.py  low_rank.py  precision.py  utils.py
src/adaattn/models/: __init__.py  gpt_wrapper.py  transformer.py
src/adaattn/utils/: __init__.py  logging.py  metrics.py  profiling.py  research_logger.py  research_monitor.py
tests/integration/: __init__.py  test_attention_pipeline.py
tests/unit/: test_adaattn_unified.py  test_adaptive_precision.py  test_adaptive_rank.py  test_attention_base.py  test_dense.py  test_entropy.py  test_low_rank.py  test_precision.py  test_utils.py
